[workspace]
members = ["packages/*", "contracts/*"]

[profile.release.package.cyber-std]
codegen-units = 1
incremental = false

[profile.release.package.std-test]
codegen-units = 1
incremental = false

[profile.release.package.cyber-std-test]
codegen-units = 1
incremental = false

[profile.release.package.cw1-whitelist]
codegen-units = 1
incremental = false

[profile.release.package.cw3-fixed-multisig]
codegen-units = 1
incremental = false

[profile.release.package.cw3-flex-multisig]
codegen-units = 1
incremental = false