[package]
name = "cw3-fixed-multisig"
version = "0.14.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implementing cw3 with an fixed group multisig"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use for DMN support
dmn = []
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw-utils = { version = "0.14.0" }
cw2 = { version = "0.14.0" }
cw3 = { version = "0.14.0" }
cosmwasm-std = { version = "1.0.0", features = ["staking"] }
cw-storage-plus = { version = "0.14.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
cyber-std = { version = "0.2.1" }

[dev-dependencies]
cw20 = { version = "0.14.0" }
cw20-base = { version = "0.14.0", features = ["library"] }
cw-multi-test = { version = "0.14.0" }
