[package]
name = "farm-20-20"
version = "0.1.0"
authors = ["CyberHead"]
edition = "2018"
description = "A Staking contract for Cyber - distribute rewards to stakers"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-schema = "1.0.0"
cw20 = { version = "0.14.0" }
cw20-base = { version = "0.14.0", features = ["library"] }
cw-storage-plus = { version = "0.14.0" }
cosmwasm-std = { version = "1.0.0", features = ["iterator"] }
cosmwasm-storage = { version = "1.0.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }
cw-utils = { version = "0.14.0" }
