[package]
name = "reflect"
version = "0.0.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
publish = false
description = "Reflect messages to use for test cases - based on cw-mask"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Change this to [] if you don't need Windows support and want faster integration tests.
default = ["cranelift"]
# Use cranelift backend instead of singlepass. This is required for development on Windows.
cranelift = ["cosmwasm-vm/cranelift"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[dependencies]
cosmwasm-schema = { version = "1.0.0" }
cosmwasm-std = { version = "1.0.0", features = ["iterator", "staking", "stargate"] }
cosmwasm-storage = { version = "1.0.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = "1.0"
cyber-std = { version = "0.2.2" }

[dev-dependencies]
cosmwasm-vm = { version = "1.0.0", default-features = false, features = ["iterator", "stargate"] }
cw-multi-test = { version = "0.14.0" }
