[package]
name = "std-test"
version = "0.1.0"
authors = ["Valery Litvin <litvintech@gmail.com>"]
edition = "2018"
description = "simple tester for cyber-std bindings"
repository = "https://github.com/cybercongress/cw-cyber"
homepage = "https://cyb.ai"
license = ""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cyber-std = { path = "../../packages/cyber-std", version = "0.1.0" }
cosmwasm-std = { version = "0.16.0", features = ["iterator", "staking"] }
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
schemars = "0.8.1"
thiserror = { version = "1.0.23" }
serde = { version = "1.0.125", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
