[package]
name = "std-test"
version = "0.2.0"
authors = ["CyberHead"]
edition = "2018"
description = "simple reflect and test contract for cyber-std bindings"
repository = "https://github.com/cybercongress/cw-cyber"
homepage = "https://cyb.ai"
license = "Apache-2.0"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cyber-std = { path = "../../packages/cyber-std", version = "0.2.0" }
cosmwasm-std = { version = "1.0.0-beta8", features = ["iterator", "staking"] }
cosmwasm-storage = { version = "1.0.0-beta8", features = ["iterator"] }
schemars = "0.8.1"
thiserror = { version = "1.0.23" }
serde = { version = "1.0.127", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta8" }
